--- a/style/main.css
+++ b/style/main.css
@@ -25,6 +25,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   font-size: max(3em, min(calc(100vw * 3 / 140), 6em));
+  text-align: center;
 }
 
 .women .card__text {
